stylesheets/styles.css
/* ... */
#talks iframe {
  width: 100%;
  height: 100%; }

#project .slideshow-wrapper {
  min-height: 200px; }
  #project .slideshow-wrapper.legacy {
    max-width: 650px; }
#project .orbit-bullets {
  margin-bottom: 10px; }
#project .project-title {
  margin-top: 20px; }
#project .project-data .row {
  line-height: 1.5rem; }
#project .project-data-key {
  font-size: 80%;
  text-transform: uppercase;
  color: gray; }
#project .project-description {
  margin-top: 16px; }
#project .orbit-container .orbit-prev, #project .orbit-container .orbit-next {
  top: 50%;
  margin-top: -60px; }
@media only screen and (max-width: 40em) {
  #project .orbit-container .orbit-caption {
    position: relative;
    padding-top: 5px;
    padding-bottom: 5px; } }

#resume {
  padding-top: 20px; }
  #resume .subtitle {
    margin: 0;
    font-weight: bold;
    color: gray;
    position: relative;
    top: -14px;
    left: 2px; }

#resume, #project {
  padding-bottom: 20px; }
  @media only screen and (min-width:40.063em) {
    #resume, #project {
      padding-bottom: 30px; } }

#templates {
  display: none; }

.external-link {
  font-size: 80%;
  white-space: nowrap; }

a.button {
  -webkit-transition: background-color 0s;
  -moz-transition: background-color 0s;
  transition: background-color 0s;
  box-shadow: none;
  -webkit-box-shadow: none; }
  a.button:hover, a.button:active {
    text-decoration: none; }

div.epilogue {
  color: #7b7b7b; }
  div.epilogue .quote::after {
    content: '“'; }
  div.epilogue .quote::before {
    content: '”'; }
  div.epilogue .author {
    text-transform: uppercase;
    font-size: 0.625rem;
    white-space: nowrap; }
    div.epilogue .author::before {
      content: '— '; }

.browsehappy {
  background-color: #ffffef;
  margin: 0;
  padding: 5px 20px;
  border-bottom: 1px solid lightgray;
  z-index: 9999; }

.orbit-bullets, .touch .orbit-bullets {
  display: table;
  text-align: center; }

